--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,63 +1,79 @@
 body {
 	margin: 0;
+	background-color: #942ed9;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 nav {
-	border-bottom: 3px solid red;
 	padding-bottom: 5px;	
 }
 
-header {
-	padding:1% 0 0 0;	
+#header {
+	padding:0.5em 2em;
+	background: linear-gradient(#8028bb, #942ed9);
+	color: #fff;
+	height:100%;	
+}
+
+#container-main {
+	background-color: #fff;
+	overflow:hidden;
+	/*padding:1.5em 0.4em;*/
+	width:100%;
 }
 
 .container {
-	margin: 0 5%;
+	margin: 0;
 	padding:0;
-}
-
-.head-logo {
-	float: left;
-	margin-right:25px;
-}
-
-.head-logo h2 {
-	font-size: 2.2em;
-}
-
-.head-links {
-	display: inherit;
-}
-
-.text-right {
-	text-align: right;
-}
-
-.inline {
-	display: inline;
 }
 
 .navlink {
 	margin-right: 2%;
 	text-decoration: none;
 	font-size: 1.8em;
-	border-right: 2px solid red;
+	border-right: 4px solid #5a0f8c;
 	padding-right: 15px;
 	line-height: 1.6em;
 	padding-bottom:0;
 }
 
-.navlink:last-child {
-	border: none;
-	margin-right:0;
+.footer {
+	background-color: antiquewhite;
+	padding:1em 0;
+	margin: 0 1em;
+	border-radius: 15px 15px 0 0;
+	border: 3px solid #5a0f8c;
+	border-bottom-style:none;
+}
+
+.fl-left {
+	float:left;
+	margin-left:0.5%;
+}
+
+.fl-right {
+	float:right;
+	margin-right:0.5%;
+}
+
+.row {
+	width:100%;
+	overflow:hidden;
+	clear:both;
+}
+
+.half-row {
+	width:49%;
+}
+
+/* 	GENERAL CLASSES  */
+
+.disp-inline {
+	display: inline;
 }
 
 .clearfix {
 	clear: both;
-}
-
-#container-main {
-	padding-top:2%;
 }
 
 .spacer {
@@ -66,33 +82,12 @@ header {
 	clear:both;
 }
 
-.triplet {
-	width:32.5%;
-	border: 2px solid darkslategray;
-	display:inline-block;
-	margin: 0;
-	padding:2% 0;
-}
-
-.triplet h2 {
-	margin: 0.5em 0;
-}
-
 .antique {
 	background-color: antiquewhite;
 }
 
 .round-box {
 	border-radius: 15px 15px 15px;	
-}
-
-.center {
-	text-align: center;
-}
-
-ul {
-	margin:0;
-	padding:0;
 }
 
 .no-list {
@@ -104,53 +99,178 @@ ul {
 	font-weight: 600;
 }
 
-.full-size {
-	width: 100%;
+.brd-top {
+	border-top: 3px solid #5a0f8c;
 }
 
-#wide-picture {
-	height: 260px;
-	background-color:#999;
+.brd-bottom {
+	border-bottom: 3px solid #5a0f8c;
 }
 
-.fl-left {
+.brd-full-primary {
+	border: 3px solid #5a0f8c;
+}
+
+/*  TEXT ELEMENTS  */
+
+a {
+	color: #5a0f8c;
+}
+
+.center {
+	text-align: center;
+}
+
+.text-right {
+	text-align: right;
+}
+
+/* SPECIFIC ITEMS */
+
+/* header space */
+
+.navlink {
+	color: #fff;
+	background:none;
+	padding-left:0.5em;
+}
+
+.navlink:hover {
+	background: #5a0f8c;
+}
+
+.logo-img {
+	width:12%;
+	height:auto;
+	max-width:3.2em;
 	float:left;
+	margin: 0 2em;
 }
 
-.fl-right {
-	float:right;
+.head-logo {
+	float: left;
 }
 
-.row {
-	width:100%;
-	clear:both;
+.head-logo h2 {
+	font-size: 2.2em;
 }
 
-.half-row {
-	width:50%;
+.head-links {
+}
+
+.navlink:last-child {
+	border: none;
+	margin-right:0;
+}
+
+.triplet {
+	width:32.3%;
+	display:inline-block;
+	margin-left: 0.0005%;
+	padding:2em 0 2.8em;
+}
+
+.triplet h2 {
+	margin: 0.5em 0;
+}
+
+.triplet li {
+	margin-bottom:0.5em;
+}
+
+.bkg-white {
+	background: #fff;
+}
+
+.bkg-tertiary {
+	background: #a6127e;
+}
+
+ul {
+	margin:0;
+	padding:0;
+}
+
+.ht-sm {
+	height: 150px;
+}
+
+.ht-md {
+	height: 340px;
+}
+
+.ht-lg-pad {
+	height:490px;
+}
+
+.ht-lg {
+	height:500px;
+}
+
+.main-article-border {
+	border: 4px solid #168c49;
+}
+
+.pic-container-main {
+	/*width:auto;*/
+	height:100%;
+	/*max-height: 495px;*/
 }
 
 .pic-wide {
+	max-width:98%;
+	height:auto;
+}
+
+.half-row-pic-cover {
+	background: url('../imgs/haitishore.jpg');
+	background-position: center center;
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+.pic-cover {
+	background: url('../imgs/pinnacles.jpg');
+	background-position: center center;
+	background-size: cover;
+	background-attachment: scroll;
+	background-repeat: no-repeat;
+}
+
+.angle-mask {
 	width:100%;
 }
 
-footer {
-	border-top: 3px solid #666;
-	background-color: antiquewhite;
-	padding:2% 0;
+.article-box {
+	border: 4px solid #168c49;
 }
 
-#container-main {
-	width:100%;
-	clear:both;
+.article-header {
+	background:linear-gradient(#109248, #12a652);
+	color: #fff;
 }
 
-.text-box {
-	padding:0 4%;
+.article-padding {
+	margin:0;
+	padding: 0.5em 20px;
 }
 
-footer {
-	border-radius: 15px 15px 0 0;
-	border: 3px solid #666;
-	border-bottom-style:none;
+.article-text {
+	display:inherit;
+}
+
+.label-box {
+	height:90px;
+	width:320px;
+	background-color: #dea645;
+	border:none;
+	top: 11.5em;
+	position:relative;
+	box-shadow: -8px 8px 2px #333;
+}
+
+.label-text {
+	padding:0.7em 2em 0;
+	font-size: 115%;
+	margin:0;
 }
