Fix image tag in index

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -223,7 +223,7 @@ ul {
 }
 
 .half-row-pic-cover {
-	background: url('../imgs/haitishore.jpg');
+	background: url('../imgs/haitiShore.jpg');
 	background-position: center center;
 	background-size: cover;
 	background-repeat: no-repeat;
