Add social media links, create dummy internal pages

--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -25,3 +25,16 @@
   padding:5px;
   margin: 0;
 }
+
+
+aside ul {
+	margin-bottom:20px;
+}
+
+aside {
+	padding-top: 15px;
+}
+
+aside li {
+	padding-bottom: 15px;
+}
