--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -38,3 +38,11 @@ aside {
 aside li {
 	padding-bottom: 15px;
 }
+
+.code-well {
+  margin: 0 1em;
+  font-family: monospace;
+  background-color: lightgrey;
+  border-radius: 10px 10px 10px;
+  padding:0.5em 2em 0.8em;
+}
