--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -5,7 +5,7 @@ body {
 }
 
 nav {
-	padding-bottom: 5px;
+	padding-bottom: 0.2em;
 }
 
 #header {
@@ -31,8 +31,8 @@ nav {
 	margin-right: 2%;
 	text-decoration: none;
 	font-size: 1.8em;
-	border-right: 4px solid #5a0f8c;
-	padding-right: 15px;
+	border-right: 0.15em solid #5a0f8c;
+	padding-right: 0.45em;
 	line-height: 1.6em;
 	padding-bottom:0;
 }
@@ -42,7 +42,7 @@ nav {
 	padding:1em 0;
 	margin: 0 1em;
 	border-radius: 15px 15px 0 0;
-	border: 3px solid #5a0f8c;
+	border: 0.2em solid #5a0f8c;
 	border-bottom-style:none;
 }
 
@@ -101,15 +101,15 @@ nav {
 }
 
 .brd-top {
-	border-top: 3px solid #5a0f8c;
+	border-top: 0.2em solid #5a0f8c;
 }
 
 .brd-bottom {
-	border-bottom: 3px solid #5a0f8c;
+	border-bottom: 0.2em solid #5a0f8c;
 }
 
 .brd-full-primary {
-	border: 3px solid #5a0f8c;
+	border: 0.2em solid #5a0f8c;
 }
 
 /*  TEXT ELEMENTS  */
@@ -209,13 +209,11 @@ ul {
 }
 
 .main-article-border {
-	border: 4px solid #168c49;
+	border: 0.25em solid #168c49;
 }
 
 .pic-container-main {
-	/*width:auto;*/
 	height:100%;
-	/*max-height: 495px;*/
 }
 
 .pic-wide {
@@ -243,7 +241,7 @@ ul {
 }
 
 .article-box {
-	border: 4px solid #168c49;
+	border: 0.25em solid #168c49;
 }
 
 .article-header {
