--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -3,11 +3,15 @@
 }
 
 .row-70 {
-	width:69%
+	width:69%;
+  display:inline-block;
+  vertical-align: text-top;
 }
 
 .row-30 {
-	width:29%
+	width:29%;
+  display: inline-block;
+  vertical-align: text-top;
 }
 
 .text-sm {
