--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -48,8 +48,11 @@ aside li {
   font-family: monospace;
   background-color: lightgrey;
   border-radius: 10px 10px 10px;
-  padding:0.5em 2em 0.8em;
+  padding:0.75em 2em;
   overflow: hidden;
+}
+
+.pre-wrap {
   white-space: pre-wrap;
 }
 
