--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -60,3 +60,13 @@ aside li {
 .fit-video {
   margin-left: 4em;
 ;}
+
+.cheat-search {
+  width: 80%;
+  border-radius: 4px;
+  border: 2px solid #CCC;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+  padding:1%;
+  margin: 0 5% 2%;
+  font-size: 1.3em;
+}
