--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -2,6 +2,11 @@
 	background: #fff;
 }
 
+main p, pre {
+  font-size: 1.2em;
+  line-height: 1.3em;
+}
+
 .row-70 {
 	width:69%;
   display:inline-block;
@@ -46,7 +51,7 @@ aside li {
 .code-well {
   margin: 0 1em;
   font-family: monospace;
-  background-color: lightgrey;
+  background-color: #eee;
   border-radius: 10px 10px 10px;
   padding:0.75em 2em;
   overflow: hidden;
